--- a/test_board/src/main/webapp/css/style.css
+++ b/test_board/src/main/webapp/css/style.css
@@ -58,6 +58,7 @@ header {
     -o-box-sizing:border-box;
     -ms-box-sizing:border-box;
     box-sizing:border-box; 
+    text-align: center;
 }
 
 footer {
@@ -97,6 +98,14 @@ table td {
 	vertical-align: top;
 	border-bottom: 1px solid #e2e2e2;
 	background: #eee;
+}
+
+.fileDrop {
+	width: 80%;
+	height: 100px;
+	border: 1px dotted gray;
+	background-color: lightslategrey;
+	margin: auto;
 }
 
 .button {
